Question - view queestion belongs to quiz

--- a/resources/views/templates/quiz-question.html
+++ b/resources/views/templates/quiz-question.html
@@ -11,49 +11,49 @@
 
                         <div class="module">
                             <div class="module-head">
-                                
+
                                   <h3>Quiz name</h3>
 
                             </div>
 
                             <div class="module-body">
-                            	
-
-                            <p><h3  class="heading"></h3></p>
 
 
-                             
+                            <h3  class="heading"></h3>
+
+
+
 
                                 <div class="module-body table">
                                      <!--foreach-->
 
                                     <table class="table table-message">
                                         <tbody>
-                                           
-                                               
-                                            
-                                            
+
+
+
+
                                             <tr class="read">
-                                                 
+
                                                  Qestion name
-                                                
+
                                                 <td class="cell-author hidden-phone hidden-tablet">
                                                      <!--foreach-->
                                                         <p>
-                                                            Answer 
-                                                            
-                                                           <span class="badge badge-success"> 
+                                                            Answer
+
+                                                           <span class="badge badge-success">
                                                            </span>
-                                                            
+
                                                         </p>
                                                     <!--endforeach-->
                                                 </td>
 
-                                                
 
-                                               
+
+
                                             </tr>
-                                           
+
 
 
                                         </tbody>
@@ -61,7 +61,7 @@
                                     </table>
                                     <!--endforeach-->
                                 </div>
-                              
+
                             <!--endforeach-->
 
                                 <div class="module-foot">
@@ -70,17 +70,17 @@
                                  </td>
                                 </div>
 
-                       	
+
                             </div>
                    		</div>
-                		
-                		</div>
-           			 
-           			</div>
-        		</div> 
 
-            </div> 
-            </div> 
+                		</div>
+
+           			</div>
+        		</div>
+
+            </div>
+            </div>
 
 
 @endsection
